[package]
name = "Cards"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "advanced", "tokio", "svg"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
pulldown-cmark = "0.9"
icondata = "0.1"
icondata_core = "0.1"
icondata_bs = "0.1.0"
syntect = "5.2"
arboard = { version = "3.4", features = ["wayland-data-control"] }

[profile.dev]
opt-level = 2
codegen-units = 12

[profile.release]
opt-level = 3
lto = false
codegen-units = 12
